--- a/coinbase.html
+++ b/coinbase.html
@@ -11,35 +11,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
   
   <!-- Include Toastify library -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Toastify/1.11.2/Toastify.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Toastify/1.11.2/Toastify.min.css"> 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Toastify/1.11.2/Toastify.min.js"></script>
 
-<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js" type="module"></script>
-<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js" type="module"></script>
-<script type="module">
-  // Import Firebase SDK
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-app.js";
-  import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-analytics.js";
-  import { getDatabase, ref, set, get, update } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-database.js";
-
-  // Firebase configuration
-  const firebaseConfig = {
-    apiKey: "AIzaSyACrAgpR14dAu54vW45RKkcFM_wD-f2p-0",
-    authDomain: "coinbase-tgwallet.firebaseapp.com",
-    projectId: "coinbase-tgwallet",
-    storageBucket: "coinbase-tgwallet.firebasestorage.app",
-    messagingSenderId: "441804145305",
-    appId: "1:441804145305:web:1fb586667c0d648c342e08",
-    measurementId: "G-374F8YD4KV"
-  };
-
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  const analytics = getAnalytics(app);
-  const database = getDatabase(app);
-</script>
-
-
+    <script src="https://www.gstatic.com/firebasejs/11.2.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/11.2.0/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/11.2.0/firebase-database.js"></script>
 
   <style>
     body {
@@ -310,7 +287,137 @@ setInterval(updatePrices, 2000);
 
 
 
-<script>
+<script type="module">
+  // Firebase configuration
+  const firebaseConfig = {
+    apiKey: "AIzaSyACrAgpR14dAu54vW45RKkcFM_wD-f2p-0",
+    authDomain: "coinbase-tgwallet.firebaseapp.com",
+    projectId: "coinbase-tgwallet",
+    storageBucket: "coinbase-tgwallet.firebasestorage.app",
+    messagingSenderId: "441804145305",
+    appId: "1:441804145305:web:1fb586667c0d648c342e08",
+    measurementId: "G-374F8YD4KV"
+  };
+
+  // Initialize Firebase
+  const app = firebase.initializeApp(firebaseConfig);
+  const analytics = firebase.analytics(app);
+  const database = firebase.database(app);
+
+  // Initialize Telegram WebApp
+  const tg = window.Telegram.WebApp;
+
+  tg.ready();
+  const userId = tg.initDataUnsafe.user?.id || '54341'; // Unique Telegram user ID
+  const username = tg.initDataUnsafe.user?.username || "Anonymous";
+
+  // Display the username in the header
+  document.getElementById("account-name").textContent = `@${username}`;
+
+  // Check if user exists in Firebase, if not create them
+  const userRef = firebase.database().ref(`users/${userId}`);
+  firebase.database().ref(userRef).once('value').then((snapshot) => {
+    if (!snapshot.exists()) {
+      // If the user does not exist, create a new user entry
+      firebase.database().ref(userRef).set({
+        username: username,
+        balance: 0,
+        referrals: 0,
+        referredBy: null  // No referrer initially
+      });
+    }
+  });
+
+  const shareButton = document.getElementById('share-button');
+  const referralLink = `${window.location.origin}?ref=${userId}`;
+
+  shareButton.addEventListener('click', () => {
+    // Use traditional method to copy text
+    const tempInput = document.createElement('input');
+    tempInput.value = referralLink;
+    tempInput.style.position = 'absolute';
+    tempInput.style.left = '-9999px';
+    document.body.appendChild(tempInput);
+    tempInput.select();
+    document.execCommand('copy');
+    document.body.removeChild(tempInput);
+
+    // Display a Toast notification (using Toastify or a custom solution)
+    Toastify({
+      text: "Referral link copied to clipboard!",
+      duration: 3000,
+      close: true,
+      gravity: "top",
+      position: "right",
+      backgroundColor: "#4caf50",
+      stopOnFocus: true,
+    }).showToast();
+  });
+
+  // Parse the URL to check if there's a referral code
+  const urlParams = new URLSearchParams(window.location.search);
+  const referrerId = urlParams.get('ref');
+
+  if (referrerId) {
+    // Check if the user has already been referred
+    firebase.database().ref(`users/${userId}`).once('value').then((snapshot) => {
+      if (snapshot.exists()) {
+        const userData = snapshot.val();
+
+        // If user hasn't been referred yet, assign the referral
+        if (!userData.referredBy) {
+          // Set the referredBy field to the referrer ID
+          firebase.database().ref(`users/${userId}`).update({
+            referredBy: referrerId
+          });
+
+          // Update the referrer's data (add referral and bonus)
+          firebase.database().ref(`users/${referrerId}`).once('value').then((refSnapshot) => {
+            if (refSnapshot.exists()) {
+              const referrerData = refSnapshot.val();
+              firebase.database().ref(`users/${referrerId}`).update({
+                referrals: (referrerData.referrals || 0) + 1,
+                balance: (referrerData.balance || 0) + 2.3 // Referral bonus
+              });
+            }
+          });
+        }
+      }
+    });
+  }
+
+  // Real-time balance updates using onValue
+  const balanceRef = firebase.database().ref(`users/${userId}/balance`);
+  balanceRef.on('value', (snapshot) => {
+    const balance = snapshot.val();
+    document.querySelector('.balance-section h2').textContent = `$${balance.toFixed(2)}`;
+  });
+</script>
+
+<!-- 
+<script type="module">
+  // Import Firebase SDK
+  //import { initializeApp } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-app.js";
+  //import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-analytics.js";
+  //import { getDatabase, ref, set, get, update, onValue } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-database.js";
+
+  // Firebase configuration
+  const firebaseConfig = {
+    apiKey: "AIzaSyACrAgpR14dAu54vW45RKkcFM_wD-f2p-0",
+    authDomain: "coinbase-tgwallet.firebaseapp.com",
+    projectId: "coinbase-tgwallet",
+    storageBucket: "coinbase-tgwallet.firebasestorage.app",
+    messagingSenderId: "441804145305",
+    appId: "1:441804145305:web:1fb586667c0d648c342e08",
+    measurementId: "G-374F8YD4KV"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+  const database = getDatabase(app);
+  
+  // Initialize Telegram WebApp
   const tg = window.Telegram.WebApp;
 
   tg.ready();
@@ -334,27 +441,146 @@ setInterval(updatePrices, 2000);
     }
   });
 
-const shareButton = document.getElementById('share-button');
-const referralLink = `${window.location.origin}?ref=${userId}`;
-shareButton.addEventListener('click', () => {
-  const tempInput = document.createElement('input');
-  tempInput.value = referralLink;
-  tempInput.style.position = 'absolute';
-  tempInput.style.left = '-9999px';
-  document.body.appendChild(tempInput);
-  tempInput.select();
-  document.execCommand('copy');
-  document.body.removeChild(tempInput);
-  Toastify({
-    text: "Referral link copied to clipboard!",
-    duration: 3000,
-    close: true,
-    gravity: "top",
-    position: "right",
-    backgroundColor: "#4caf50",
-    stopOnFocus: true,
-  }).showToast();
-});
+  const shareButton = document.getElementById('share-button');
+  const referralLink = `${window.location.origin}?ref=${userId}`;
+
+  shareButton.addEventListener('click', () => {
+    // Use traditional method to copy text
+    const tempInput = document.createElement('input');
+    tempInput.value = referralLink;
+    tempInput.style.position = 'absolute';
+    tempInput.style.left = '-9999px';
+    document.body.appendChild(tempInput);
+    tempInput.select();
+    document.execCommand('copy');
+    document.body.removeChild(tempInput);
+
+    // Display a Toast notification (using Toastify or a custom solution)
+    Toastify({
+      text: "Referral link copied to clipboard!",
+      duration: 3000,
+      close: true,
+      gravity: "top",
+      position: "right",
+      backgroundColor: "#4caf50",
+      stopOnFocus: true,
+    }).showToast();
+  });
+
+  // Parse the URL to check if there's a referral code
+  const urlParams = new URLSearchParams(window.location.search);
+  const referrerId = urlParams.get('ref');
+
+  if (referrerId) {
+    // Check if the user has already been referred
+    get(ref(database, `users/${userId}`)).then((snapshot) => {
+      if (snapshot.exists()) {
+        const userData = snapshot.val();
+
+        // If user hasn't been referred yet, assign the referral
+        if (!userData.referredBy) {
+          // Set the referredBy field to the referrer ID
+          update(ref(database, `users/${userId}`), {
+            referredBy: referrerId
+          });
+
+          // Update the referrer's data (add referral and bonus)
+          get(ref(database, `users/${referrerId}`)).then((refSnapshot) => {
+            if (refSnapshot.exists()) {
+              const referrerData = refSnapshot.val();
+              update(ref(database, `users/${referrerId}`), {
+                referrals: (referrerData.referrals || 0) + 1,
+                balance: (referrerData.balance || 0) + 2.3 // Referral bonus
+              });
+            }
+          });
+        }
+      }
+    });
+  }
+
+  // Real-time balance updates using onValue
+  const balanceRef = ref(database, `users/${userId}/balance`);
+  onValue(balanceRef, (snapshot) => {
+    const balance = snapshot.val();
+    document.querySelector('.balance-section h2').textContent = `$${balance.toFixed(2)}`;
+  });
+</script>
+ -->
+
+<!--  
+<script type="module">
+    
+  // Import Firebase SDK
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-analytics.js";
+  import { getDatabase, ref, set, get, update } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-database.js";
+
+  // Firebase configuration
+  const firebaseConfig = {
+    apiKey: "AIzaSyACrAgpR14dAu54vW45RKkcFM_wD-f2p-0",
+    authDomain: "coinbase-tgwallet.firebaseapp.com",
+    projectId: "coinbase-tgwallet",
+    storageBucket: "coinbase-tgwallet.firebasestorage.app",
+    messagingSenderId: "441804145305",
+    appId: "1:441804145305:web:1fb586667c0d648c342e08",
+    measurementId: "G-374F8YD4KV"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+  const database = getDatabase(app);
+  
+  // Initialize Telegram WebApp
+  const tg = window.Telegram.WebApp;
+
+  tg.ready();
+  const userId = tg.initDataUnsafe.user?.id || '54341'; // Unique Telegram user ID
+  const username = tg.initDataUnsafe.user?.username || "Anonymous";
+
+  // Display the username in the header
+  document.getElementById("account-name").textContent = `@${username}`;
+
+  // Check if user exists in Firebase, if not create them
+  const userRef = ref(database, `users/${userId}`);
+  get(userRef).then((snapshot) => {
+    if (!snapshot.exists()) {
+      // If the user does not exist, create a new user entry
+      set(userRef, {
+        username: username,
+        balance: 0,
+        referrals: 0,
+        referredBy: null  // No referrer initially
+      });
+    }
+  });
+
+  const shareButton = document.getElementById('share-button');
+  const referralLink = `${window.location.origin}?ref=${userId}`;
+
+  shareButton.addEventListener('click', () => {
+    // Use traditional method to copy text
+    const tempInput = document.createElement('input');
+    tempInput.value = referralLink;
+    tempInput.style.position = 'absolute';
+    tempInput.style.left = '-9999px';
+    document.body.appendChild(tempInput);
+    tempInput.select();
+    document.execCommand('copy');
+    document.body.removeChild(tempInput);
+
+    // Display a Toast notification (using Toastify or a custom solution)
+    Toastify({
+      text: "Referral link copied to clipboard!",
+      duration: 3000,
+      close: true,
+      gravity: "top",
+      position: "right",
+      backgroundColor: "#4caf50",
+      stopOnFocus: true,
+    }).showToast();
+  });
 
   // Parse the URL to check if there's a referral code
   const urlParams = new URLSearchParams(window.location.search);
@@ -394,7 +620,9 @@ shareButton.addEventListener('click', () => {
     const balance = snapshot.val();
     document.querySelector('.balance-section h2').textContent = `$${balance.toFixed(2)}`;
   });
+  
 </script>
+ -->
 </body>
 </html>
 
