--- a/coinbase.html
+++ b/coinbase.html
@@ -13,6 +13,10 @@
   <!-- Include Toastify library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Toastify/1.11.2/Toastify.min.css"> 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Toastify/1.11.2/Toastify.min.js"></script>
+<!-- iziToast JS -->
+    <script src="https://cdn.jsdelivr.net/npm/izitoast/dist/js/iziToast.min.js"></script>
+        <!-- iziToast CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/izitoast/dist/css/iziToast.min.css">
 <!--  
     <script src="https://www.gstatic.com/firebasejs/11.2.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/11.2.0/firebase-analytics.js"></script>
@@ -286,151 +290,6 @@ const updatePrices = () => {
 setInterval(updatePrices, 2000);
 </script>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!--  
-<script type="module">
-  
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
-  apiKey: "AIzaSyACrAgpR14dAu54vW45RKkcFM_wD-f2p-0",
-  authDomain: "coinbase-tgwallet.firebaseapp.com",
-  databaseURL: "https://coinbase-tgwallet-default-rtdb.firebaseio.com",
-  projectId: "coinbase-tgwallet",
-  storageBucket: "coinbase-tgwallet.firebasestorage.app",
-  messagingSenderId: "441804145305",
-  appId: "1:441804145305:web:1fb586667c0d648c342e08",
-  measurementId: "G-374F8YD4KV"
-};
-
-  // Initialize Firebase
-  const app = firebase.initializeApp(firebaseConfig);
-  const analytics = firebase.analytics(app);
-  const database = firebase.database(app);
-
-  // Initialize Telegram WebApp
-  const tg = window.Telegram.WebApp;
-
-  tg.ready();
-  const userId = tg.initDataUnsafe.user?.id || '54341'; // Unique Telegram user ID
-  const username = tg.initDataUnsafe.user?.username || "Anonymous";
-
-  // Display the username in the header
-  document.getElementById("account-name").textContent = `@${username}`;
-
-  // Check if user exists in Firebase, if not create them
-  const userRef = firebase.database().ref(`users/${userId}`);
-  firebase.database().ref(userRef).once('value').then((snapshot) => {
-    if (!snapshot.exists()) {
-      // If the user does not exist, create a new user entry
-      firebase.database().ref(userRef).set({
-        username: username,
-        balance: 0,
-        referrals: 0,
-        referredBy: null  // No referrer initially
-      });
-    }
-  });
-
-  const shareButton = document.getElementById('share-button');
-  const referralLink = `${window.location.origin}?ref=${userId}`;
-
-  shareButton.addEventListener('click', () => {
-    // Use traditional method to copy text
-    const tempInput = document.createElement('input');
-    tempInput.value = referralLink;
-    tempInput.style.position = 'absolute';
-    tempInput.style.left = '-9999px';
-    document.body.appendChild(tempInput);
-    tempInput.select();
-    document.execCommand('copy');
-    document.body.removeChild(tempInput);
-
-    // Display a Toast notification (using Toastify or a custom solution)
-    Toastify({
-      text: "Referral link copied to clipboard!",
-      duration: 3000,
-      close: true,
-      gravity: "top",
-      position: "right",
-      backgroundColor: "#4caf50",
-      stopOnFocus: true,
-    }).showToast();
-  });
-
-  // Parse the URL to check if there's a referral code
-  const urlParams = new URLSearchParams(window.location.search);
-  const referrerId = urlParams.get('ref');
-
-  if (referrerId) {
-    // Check if the user has already been referred
-    firebase.database().ref(`users/${userId}`).once('value').then((snapshot) => {
-      if (snapshot.exists()) {
-        const userData = snapshot.val();
-
-        // If user hasn't been referred yet, assign the referral
-        if (!userData.referredBy) {
-          // Set the referredBy field to the referrer ID
-          firebase.database().ref(`users/${userId}`).update({
-            referredBy: referrerId
-          });
-
-          // Update the referrer's data (add referral and bonus)
-          firebase.database().ref(`users/${referrerId}`).once('value').then((refSnapshot) => {
-            if (refSnapshot.exists()) {
-              const referrerData = refSnapshot.val();
-              firebase.database().ref(`users/${referrerId}`).update({
-                referrals: (referrerData.referrals || 0) + 1,
-                balance: (referrerData.balance || 0) + 2.3 // Referral bonus
-              });
-            }
-          });
-        }
-      }
-    });
-  }
-
-  // Real-time balance updates using onValue
-  const balanceRef = firebase.database().ref(`users/${userId}/balance`);
-  balanceRef.on('value', (snapshot) => {
-    const balance = snapshot.val();
-    document.querySelector('.balance-section h2').textContent = `$${balance.toFixed(2)}`;
-  });
-</script>
- -->
-
 <script type="module">
   // Import Firebase SDK
   import { initializeApp } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-app.js";
@@ -479,7 +338,7 @@ const firebaseConfig = {
   });
 
   const shareButton = document.getElementById('share-button');
-  const referralLink = `${window.location.origin}?ref=${userId}`;
+  const referralLink = `${window.location.origin}?ref=${userId}` || `https://t.me/CoinbaseSendBot/CoinbaseWallet?ref=${userId}`;
 
   shareButton.addEventListener('click', () => {
     // Use traditional method to copy text
@@ -493,15 +352,12 @@ const firebaseConfig = {
     document.body.removeChild(tempInput);
 
     // Display a Toast notification (using Toastify or a custom solution)
-    Toastify({
-      text: "Referral link copied to clipboard!",
+    iziToast.success({
+      title: "Copied!",
+      message: "Referral link copied to clipboard!",
       duration: 3000,
-      close: true,
-      gravity: "top",
-      position: "right",
-      backgroundColor: "#4caf50",
-      stopOnFocus: true,
-    }).showToast();
+      position: "topRight",
+    });
   });
 
   // Parse the URL to check if there's a referral code
@@ -539,127 +395,12 @@ const firebaseConfig = {
   // Real-time balance updates using onValue
   const balanceRef = ref(database, `users/${userId}/balance`);
   onValue(balanceRef, (snapshot) => {
-    const balance = snapshot.val();
+    const balance = isNaN(snapshot.val()) ? parseFloat(snapshot.val()) : snapshot.val();
     document.querySelector('.balance-section h2').textContent = `$${balance.toFixed(2)}`;
   });
 </script>
  
 
-<!--  
-<script type="module">
-    
-  // Import Firebase SDK
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-app.js";
-  import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-analytics.js";
-  import { getDatabase, ref, set, get, update } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-database.js";
-
-  // Firebase configuration
-  const firebaseConfig = {
-    apiKey: "AIzaSyACrAgpR14dAu54vW45RKkcFM_wD-f2p-0",
-    authDomain: "coinbase-tgwallet.firebaseapp.com",
-    projectId: "coinbase-tgwallet",
-    storageBucket: "coinbase-tgwallet.firebasestorage.app",
-    messagingSenderId: "441804145305",
-    appId: "1:441804145305:web:1fb586667c0d648c342e08",
-    measurementId: "G-374F8YD4KV"
-  };
-
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  const analytics = getAnalytics(app);
-  const database = getDatabase(app);
-  
-  // Initialize Telegram WebApp
-  const tg = window.Telegram.WebApp;
-
-  tg.ready();
-  const userId = tg.initDataUnsafe.user?.id || '54341'; // Unique Telegram user ID
-  const username = tg.initDataUnsafe.user?.username || "Anonymous";
-
-  // Display the username in the header
-  document.getElementById("account-name").textContent = `@${username}`;
-
-  // Check if user exists in Firebase, if not create them
-  const userRef = ref(database, `users/${userId}`);
-  get(userRef).then((snapshot) => {
-    if (!snapshot.exists()) {
-      // If the user does not exist, create a new user entry
-      set(userRef, {
-        username: username,
-        balance: 0,
-        referrals: 0,
-        referredBy: null  // No referrer initially
-      });
-    }
-  });
-
-  const shareButton = document.getElementById('share-button');
-  const referralLink = `${window.location.origin}?ref=${userId}`;
-
-  shareButton.addEventListener('click', () => {
-    // Use traditional method to copy text
-    const tempInput = document.createElement('input');
-    tempInput.value = referralLink;
-    tempInput.style.position = 'absolute';
-    tempInput.style.left = '-9999px';
-    document.body.appendChild(tempInput);
-    tempInput.select();
-    document.execCommand('copy');
-    document.body.removeChild(tempInput);
-
-    // Display a Toast notification (using Toastify or a custom solution)
-    Toastify({
-      text: "Referral link copied to clipboard!",
-      duration: 3000,
-      close: true,
-      gravity: "top",
-      position: "right",
-      backgroundColor: "#4caf50",
-      stopOnFocus: true,
-    }).showToast();
-  });
-
-  // Parse the URL to check if there's a referral code
-  const urlParams = new URLSearchParams(window.location.search);
-  const referrerId = urlParams.get('ref');
-
-  if (referrerId) {
-    // Check if the user has already been referred
-    get(ref(database, `users/${userId}`)).then((snapshot) => {
-      if (snapshot.exists()) {
-        const userData = snapshot.val();
-
-        // If user hasn't been referred yet, assign the referral
-        if (!userData.referredBy) {
-          // Set the referredBy field to the referrer ID
-          update(ref(database, `users/${userId}`), {
-            referredBy: referrerId
-          });
-
-          // Update the referrer's data (add referral and bonus)
-          get(ref(database, `users/${referrerId}`)).then((refSnapshot) => {
-            if (refSnapshot.exists()) {
-              const referrerData = refSnapshot.val();
-              update(ref(database, `users/${referrerId}`), {
-                referrals: (referrerData.referrals || 0) + 1,
-                balance: (referrerData.balance || 0) + 2.3 // Referral bonus
-              });
-            }
-          });
-        }
-      }
-    });
-  }
-
-  // Real-time balance updates
-  const balanceRef = ref(database, `users/${userId}/balance`);
-  balanceRef.on('value', (snapshot) => {
-    const balance = snapshot.val();
-    document.querySelector('.balance-section h2').textContent = `$${balance.toFixed(2)}`;
-  });
-  
-</script>
- -->
 </body>
 </html>
 
